fix slight misalignment by giving title and status columns same styles as others
git-svn-id: https://svn.socialplanning.org/svn/TaskTracker/trunk@2512 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/tasktracker/public/stylesheets/list.css
+++ b/tasktracker/public/stylesheets/list.css
@@ -28,12 +28,16 @@ table.task_list {
       width: 15%;
     }
     td.status-column {
+      height: 3.5em;
+      padding: 0;
       width: 1%;
     }
     td.status-column[custom_statuses="True"] {
       width: 5%;
     }
     td.title-column {
+      height: 3.5em;
+      padding: 0;
       width: 30%;
     }
       .first_line, .second-line { width: 100%; height: 50%; padding: 0 .25em; }
